# JSecurity

.github/workflows/: build.yml
jsecurity-api/: README.md  pyproject.toml  requirements.txt  settings_example.env  setup.cfg
jsecurity-api/jsecurity_api/config/: factories.py  settings.py
jsecurity-api/jsecurity_api/model/: request.py  settings.py
jsecurity-api/tests/config/: test_settings.py
jsecurity-api/tests/model/: test_request.py
jsecurity-persistence/: README.md  pyproject.toml  requirements.txt  setup.cfg
jsecurity-persistence/jsecurity_persistence/models/: user.py
jsecurity-persistence/tests/models/: test_user.py
jsecurity-service/: README.md  pyproject.toml  requirements.txt  setup.cfg
jsecurity-service/jsecurity_service/: __init__.py  dependencies.py  utils.py
jsecurity-service/jsecurity_service/router/: login.py
jsecurity-service/tests/: __init__.py  test_dependencies.py
jsecurity-service/tests/router/: test_login.py
