[metadata]
name = JSecurity API
version = attr: jsecurity_api.__version__
author = Louke
author_email = git@jannsen.org
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
install_requires =
    pydantic >= 2.5.3
    pydantic_settings >= 2.1.0
    email-validator >= 2.1.0.post1

[options.package_data]
* = *.jpeg, *.json