[metadata]
name = JSecurity Persistence
version = attr: jsecurity_persistence.__version__
author = Louke
author_email = git@jannsen.org
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
install_requires =
    beanie >= 1.24.0
    mongomock-motor >= 0.0.26
    typing_extensions >= 4.9.0
    email-validator >= 2.1.0.post1

[options.package_data]
* = *.jpeg, *.json