[metadata]
name = JSecurity Service
version = attr: jsecurity_service.__version__
author = Louke
author_email = git@jannsen.org
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
install_requires =
    fastapi >= 0.108.0
    typing_extensions >= 4.9.0

[options.package_data]
* = *.jpeg, *.json